First DOM project

--- a/Basic/WordCounter/Main.html
+++ b/Basic/WordCounter/Main.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Basic Calculator</title>
+		<title>Word Counter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<!-- Nothing here, as EVERYTHING should be inserted by Javascript. Don't give up ma boi! -->
 		<script src="script.js"></script>
 	</body>
 </html>
